--- a/Proyecto/Proyecto/templates/base.html
+++ b/Proyecto/Proyecto/templates/base.html
@@ -24,7 +24,7 @@
                 <li><a href="/socios/" class="sidebar-link flex items-center gap-2"><i class="ti ti-users"></i> <span class="sidebar-text">Socios</span></a></li>
                 <li><a href="/prestamos/" class="sidebar-link flex items-center gap-2"><i class="ti ti-arrows-exchange"></i> <span class="sidebar-text">Préstamos</span></a></li>
                 <li><a href="/multas/" class="sidebar-link flex items-center gap-2"><i class="ti ti-currency-dollar"></i> <span class="sidebar-text">Multas</span></a></li>
-                <li><a href="#" class="sidebar-link flex items-center gap-2" id="configuracion-btn"><i class="ti ti-settings"></i> <span class="sidebar-text">Configuración</span></a></li>
+                <li><a href="/configuracion/" class="sidebar-link flex items-center gap-2" id="configuracion-btn"><i class="ti ti-settings"></i> <span class="sidebar-text">Configuración</span></a></li>
             </ul>
         </nav>
         <div class="mt-8 text-center">
