--- a/Proyecto/Proyecto/static/css/dashboard-global.css
+++ b/Proyecto/Proyecto/static/css/dashboard-global.css
@@ -31,7 +31,7 @@
   background: #d8e5ee !important;
   background-color: #d8e5ee !important;
   box-shadow: 20px 20px 60px #b8c3ca, -20px -20px 60px #f8ffff;
-  color: #ef4444 !important;
+  color: #00dffc !important;
   border: none;
   font-weight: bold;
   font-size: 1.1rem;
